--- a/templates/countries.html
+++ b/templates/countries.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R-code Project</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="../static/countries.js" defer></script>
+    <link rel="stylesheet" href="../static/index.css">
+    <title>Countries</title>
 </head>
 <body>
-    
+    <div id="map" class="map"></div>
 </body>
 </html>
