--- a/templates/askforname.html
+++ b/templates/askforname.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../static/index.css">
     <title>R-code Project</title>
 </head>
 <body>
-
+    <img src="../static/images/logo ho3.webp" class="logo">
+    <p class="enter-name-text">Welcome, Agent. To unlock the classified files, please state your code name and proceed with caution.</p>
+    <form class="enter-name-div">
+        <input class="enter-name-input" type="text" name="name" placeholder="Enter your name...">
+        <input class="enter-name-submit" type="submit" value="OK">
+    </form>
 </body>
 </html>
