--- a/templates/countries.html
+++ b/templates/countries.html
@@ -10,6 +10,16 @@
     <title>Countries</title>
 </head>
 <body>
+    <img src="../static/images/logo%20ho.webp" class="small-logo">
     <div id="map" class="map"></div>
 </body>
+<script>
+    window.onload= function() {
+        fetch("http://127.0.0.1:5000/get_countries")
+            .then(response => response.json())
+            .then(data => {
+                init_map(data);
+            }).catch(error => console.log(error));
+    }
+</script>
 </html>
