Css name changed

--- a/templates/detective_name.html
+++ b/templates/detective_name.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="../static/countries.css">
     <title>R-code Project</title>
 </head>
 <body class="enter-name-body">
