--- a/templates/countries.html
+++ b/templates/countries.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="../static/countries.js" defer></script>
-    <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="../static/countries.css">
     <title>Countries</title>
 </head>
 <body>
