--- a/templates/intro.html
+++ b/templates/intro.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="vdo-space">
-        <video width="1850" height="760" autoplay>
+        <video width="1850" height="760">
             <source src="/static/video/R-Code-Intro.mp4" type="video/mp4">
         </video>
     </div>
