--- a/templates/intro.html
+++ b/templates/intro.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <div class="vdo-space">
-        <video width="1850" height="760" autoplay>
-            <source src="/static/video/R-Code-Intro.mp4" type="video/mp4">
-        </video>
+        <iframe width="1850" height="760"
+                src="https://www.youtube.com/embed/R54DFTXVAoM?si=zww7CICzCl9Z26Mm/autoplay=1"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+        </iframe>
     </div>
     <div class="button-space">
         <button id="how-to-play">HOW TO PLAY</button>
