--- a/templates/correct.html
+++ b/templates/correct.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Correct</title>
-    <link rel="stylesheet" type="text/css"  href="../static/correct.css">
+    <link rel="stylesheet" type="text/css"  href="../static/css/correct.css">
     <script src="../static/js/answersCheck.js"></script>
 
 </head>
