--- a/templates/countries.html
+++ b/templates/countries.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="../static/countries.js" defer></script>
-    <link rel="stylesheet" href="../static/countries.css">
+    <script src="../static/js/countries.js" defer></script>
+    <link rel="stylesheet" href="../static/css/countries.css">
     <title>Countries</title>
 </head>
 <body>
