--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
-    <link href="../static/dashboard.css" rel="stylesheet">
+    <link href="../static/css/dashboard.css" rel="stylesheet">
 </head>
 <body>
 <div class="dashboard">
 <header>
     <div id="logoho">
-       <img src="/static/images/logo%20ho.webp" alt="Detective icon and the game title 'R-CODE Project'">
+       <img src="../static/images/logo%20ho.webp" alt="Detective icon and the game title 'R-CODE Project'">
     </div>
     <div id="player">
-        <img src="/static/images/badge%20icon.webp" alt="An icon of police badge">
+        <img src="../static/images/badge%20icon.webp" alt="An icon of police badge">
         <p>Agent: {{playerName}}<br>Agent number: {{playerNumber}}</p>
     </div>
     <div id="location">
-        <p>You are now in:<br><img src="/static/images/location%20icon.webp" alt="An map pin icon">{{country}}</p>
+        <p>You are now in:<br><img src="../static/images/location%20icon.webp" alt="An map pin icon">{{country}}</p>
     </div>
 </header>
 <main>
@@ -32,11 +32,11 @@
 <footer>
     <div id="ricinastat">
         <h2>Ricina Status</h2>
-        <div class="ricina"><img src="/static/images/ricina%20icon.webp"></div>
-        <div class="ricina"><img src="/static/images/ricina%20icon.webp"></div>
-        <div class="ricina"><img src="/static/images/ricina%20icon.webp"></div>
-        <div class="ricina"><img src="/static/images/ricina%20icon.webp"></div>
-        <div class="ricina"><img src="/static/images/ricina%20icon.webp"></div>
+        <div class="ricina"><img src="../static/images/ricina%20icon.webp"></div>
+        <div class="ricina"><img src="../static/images/ricina%20icon.webp"></div>
+        <div class="ricina"><img src="../static/images/ricina%20icon.webp"></div>
+        <div class="ricina"><img src="../static/images/ricina%20icon.webp"></div>
+        <div class="ricina"><img src="../static/images/ricina%20icon.webp"></div>
     </div>
     <div id="missionleft">
         <p>{{missionLeft}}</p>
@@ -49,6 +49,6 @@
     </div>
 </footer>
 </div>
-<script src="/static/script/dashboard_script.js" defer></script>
+<script src="../static/js/dashboard_script.js" defer></script>
 </body>
 </html>
