--- a/templates/incorrect.html
+++ b/templates/incorrect.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Incorrect</title>
-    <link rel="stylesheet" type="text/css" href="../static/incorrect.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/incorrect.css">
     <script src="../static/js/answersCheck.js"></script>
 
 </head>
@@ -21,7 +21,7 @@
         </p>
         <img class='status' src="../static/images/13.png" height="216" width="384"/>
 
-         <img class='ricina1' src="../static/images/kill%20icon.webp" height="45" width="81">
+         <img class='ricina1' src="../static/images/killicon.webp" height="45" width="81">
          <img class='ricina2' src="../static/images/ricina%20fill.png" height="45" width="81">
         <img class='ricina3' src="../static/images/ricina%20fill.png" height="45" width="81">
         <img class='ricina4' src="../static/images/ricina%20fill.png" height="45" width="81">
