--- a/templates/start.html
+++ b/templates/start.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>R-Code Project Game</title>
-    <link rel="stylesheet" href="/static/start.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lato&family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/start.css">
 </head>
 
 <body>
     <div class ="wrapper">
         <div class="logoVer">
-            <img src="/static/images/logo%20ver%20wh.webp" alt="Logo">
+            <img src="../static/images/logo%20ver%20wh.webp" alt="Logo">
         </div>
         <div class ="button">
             <button class = "start-bt">START</button>
