--- a/static/css/countries.css
+++ b/static/css/countries.css
@@ -3,16 +3,24 @@
     --bordeaux: #8C0F26;
     --green:#2D5951;
     --red: #F23558;
-    --font: 'IBM Plex Mono', monospace;
+}
+@font-face {
+    font-family: 'bold';
+    src: url("../font/IBMPlexMono-Bold.ttf") format("truetype");
+
+}
+@font-face {
+    font-family: 'regular';
+    src: url("../font/IBMPlexMono-Regular.ttf") format("truetype");
 }
 
 body{
-    background-image: url("images/background.webp");
+    background-image: url("../images/background.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom right;
     min-height: 97.8vh;
-    font-family: var(--font);
+    font-family: 'regular';
 }
 
 .enter-name-body{
@@ -30,7 +38,7 @@ body{
 }
 
 .enter-name-text{
-    color: var(--white);
+    color: #EEEBEB;
     font-size: 26px;
     width: 60%;
     align-self: center;
@@ -43,30 +51,30 @@ body{
     width: 27rem;
     background-color: transparent;
     border-radius: 20px;
-    border: solid 2px var(--white);
+    border: solid 2px #EEEBEB;
     padding: 0.8rem 15rem;
-    font-family: var(--font);
+    font-family: 'regular';
     font-size: large;
     text-align: center;
-    color: var(--white);
+    color: #EEEBEB;
 }
 
 .enter-name-submit{
     align-self: end;
     width: 10rem;
     padding: 1rem;
-    border-color: var(--white);
+    border-color: #EEEBEB;
     border-radius: 20px;
-    color: var(--bordeaux);
-    background-color: var(--white);
+    color: #8C0F26;
+    background-color: #EEEBEB;
     font-weight: bolder;
     font-size: 20px;
 }
 
 .enter-name-submit:hover{
-    background-color: var(--bordeaux);
-    color: var(--white);
-    border-color: var(--bordeaux);
+    background-color: #8C0F26;
+    color: #EEEBEB;
+    border-color: #8C0F26;
 }
 
 .enter-name-div{
@@ -95,7 +103,7 @@ body{
     align-items: center;
     justify-items: center;
     margin: auto;
-    background-color: var(--white);
+    background-color: #EEEBEB;
     width: 80vw;
     height: 70vh;
     text-align: center;
@@ -103,7 +111,7 @@ body{
 }
 
 .howto-h1{
-    color: var(--bordeaux);
+    color: #8C0F26;
     font-size: 50px;
     margin: 1rem;
 }
@@ -113,7 +121,7 @@ body{
     overflow-x: hidden;
     scroll-snap-type: y mandatory;
     margin: -3px auto;
-    border: 2px solid var(--bordeaux);
+    border: 2px solid #8C0F26;
     border-radius: 30px;
     width: 80%;
     height: 18rem;
@@ -135,8 +143,8 @@ body{
 .button{
     display: flex;
     margin: 1rem auto;
-    background-color: var(--white);
-    color: var(--bordeaux);
+    background-color: #EEEBEB;
+    color: #8C0F26;
     padding: 1rem 8rem;
     border-radius: 20px;
     font-size: 30px;
@@ -144,7 +152,7 @@ body{
 }
 
 .button:hover{
-    color: var(--white);
-    background-color: var(--bordeaux);
+    color: #EEEBEB;
+    background-color: #8C0F26;
     border: none;
 }
