--- a/static/css/gameOver.css
+++ b/static/css/gameOver.css
@@ -1,16 +1,16 @@
 @font-face {
     font-family: 'bold';
-    src: url("../static/font/Bold.ttf");
+    src: url("../font/IBMPlexMono-Bold.ttf") format("truetype");
+
 }
 @font-face {
     font-family: 'regular';
-    src: url("../static/font/Regular.ttf");
+    src: url("../font/IBMPlexMono-Regular.ttf") format("truetype");
 }
-
 body {
     margin: 0;
     padding: 0;
-    background: url(../static/images/page-photo.png) center center fixed;
+    background: url("../images/background.webp") center center fixed;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
@@ -39,18 +39,17 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
-
-.next input{
-    background-color: #EEEBEB;
+.again input{
+     background-color: #EEEBEB;
     border: none;
     color:#8C1026;
-    font-size: 19px;
+    font-size: 20px;
     font-family: bold;
-    padding-left: 3px;
+    padding-left: 10px;
     cursor: pointer;
 }
 
-.next {
+.again {
     padding: 10px;
     display: inline-block;
     font-size: 20px;
@@ -65,81 +64,48 @@ body {
     left: 45%;
     position: absolute;
 }
-
-
-.correct {
+.over {
     text-align: center;
     padding: 10px;
     font-family:"bold";
     font-size: 50px;
-    color: #2D5951;
+    color: #8C1026;
 }
 .text{
-     text-align: center;
+    text-align: center;
     padding: 10px;
     font-family: "regular";
     font-size: 28px;
     color: #26010B;
 }
-
-.status{
-    position: absolute;
-    top: 60%;
-    left: 8%;
+.small-text{
+    position: fixed;
+    right: 320px;
+    top: 300px;
+    font-family: "regular";
+    font-size: 25px;
+    color: #26010B;
 }
-.mission{
+
+
+.badge{
+     position: absolute;
+    top: 42%;
+    left: 5%;
+}
+.name{
     position: absolute;
-    top: 64%;
+    top: 70%;
     left: 35%;
+    font-family: "regular";
+    color: #EEEBEB;
+    font-size: 20px;
 }
 .number{
     position: absolute;
     top: 78%;
-    left: 41%;
+    left: 40%;
     font-family: "regular";
     color: #EEEBEB;
-    font-size: 15px;
-    font-weight: bold;
-
-}
-.location{
-    position: absolute;
-    top: 62%;
-    left: 60%;
-}
-
-.country{
-     position: absolute;
-    top: 78%;
-    left: 74%;
-    font-family: "regular";
-    color: #EEEBEB;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.ricina1{
-     position: absolute;
-     top: 80%;
-     left: 15%;
-}
-.ricina2{
-     position: absolute;
-     top: 80%;
-     left: 18%;
-}
-.ricina3{
-     position: absolute;
-     top: 80%;
-     left: 21%;
-}
-.ricina4{
-     position: absolute;
-     top: 80%;
-     left: 24%;
-}
-.ricina5{
-     position: absolute;
-     top: 80%;
-     left: 27%;
+    font-size: 16px;
 }
