--- a/static/css/intro.css
+++ b/static/css/intro.css
@@ -1,10 +1,26 @@
+:root {
+    --white: #EEEBEB;
+    --bordeaux: #8C0F26;
+    --green:#2D5951;
+    --red: #F23558;
+}
+@font-face {
+    font-family: 'bold';
+    src: url("../font/IBMPlexMono-Bold.ttf") format("truetype");
+
+}
+@font-face {
+    font-family: 'regular';
+    src: url("../font/IBMPlexMono-Regular.ttf") format("truetype");
+}
+
 * {
     margin:0;
     padding: 0;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'regualr';
 }
 body {
-    background: url("/static/images/dashboard.png");
+    background: url("../images/dashboard.png");
     height: 100vh;
     background-size: cover;
     position: relative;
