--- a/static/css/start.css
+++ b/static/css/start.css
@@ -1,11 +1,27 @@
+:root {
+    --white: #EEEBEB;
+    --bordeaux: #8C0F26;
+    --green:#2D5951;
+    --red: #F23558;
+}
+@font-face {
+    font-family: 'bold';
+    src: url("../font/IBMPlexMono-Bold.ttf") format("truetype");
+}
+@font-face {
+    font-family: 'regular';
+    src: url("../font/IBMPlexMono-Regular.ttf") format("truetype");
+}
+
+
 * {
     margin:0;
     padding: 0;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'bold';
 }
 
 body {
-    background-image: url("../static/images/start_bg.webp");
+    background-image: url("../images/start_bg.webp");
     height: 100vh;
     background-size: cover;
     position: relative;
