--- a/templates/detective_name.html
+++ b/templates/detective_name.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/countries.css">
+    <link rel="stylesheet" href="../static/css/countries.css">
     <title>R-code Project</title>
 </head>
 <body class="enter-name-body">
