--- a/templates/exit.html
+++ b/templates/exit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exit</title>
-    <link rel="stylesheet" type="text/css"  href="../static/exit.css">
+    <link rel="stylesheet" type="text/css"  href="../static/css/exit.css">
     <script src="../static/js/exitOrBackToMission.js"></script>
 
 
