--- a/templates/gameOver.html
+++ b/templates/gameOver.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game over</title>
-    <link rel="stylesheet" type="text/css" href="../static/gameOver.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/gameOver.css">
 </head>
 <body>
    <div id="logo">
