--- a/templates/intro.html
+++ b/templates/intro.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>R-Code Project Game</title>
-    <link rel="stylesheet" href="/static/intro.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lato&family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/intro.css">
 </head>
 <body>
     <div class="vdo-space">
-        <video width="1850" height="760" autoplay>
-            <source src="/static/video/R-Code-Intro.mp4" type="video/mp4">
+        <video width="1850" height="760" controls>
+            <source src="../static/video/R-Code-Intro.mp4" type="video/mp4">
         </video>
     </div>
     <div class="button-space">
