--- a/templates/howto.html
+++ b/templates/howto.html
@@ -33,5 +33,10 @@
         </div>
     </div>
     <button type="submit" class="button">OK</button>
+<script>
+    document.querySelector('button').addEventListener('click', function(){
+      window.location.href = 'http://127.0.0.1:5000/dashboard';
+    })
+</script>
 </body>
 </html>
