--- a/templates/mission-file.html
+++ b/templates/mission-file.html
@@ -16,5 +16,10 @@
         <img id="file-nor" src="/static/images/file.webp" alt="mission file">
         <img id="file-hover" src="/static/images/file%20hover.webp" alt="mission file hover">
     </div>
+<script>
+    document.getElementById('file-hover').addEventListener('click', function(){
+      window.location.href = 'http://127.0.0.1:5000/dashboard';
+    })
+</script>
 </body>
 </html>
