--- a/templates/start.html
+++ b/templates/start.html
@@ -18,5 +18,10 @@
             <button class = "start-bt">START</button>
         </div>
     </div>
+<script>
+  document.querySelector('button').addEventListener('click', function(){
+  window.location.href = 'http://127.0.0.1:5000/detective_name'
+  })
+</script>
 </body>
 </html>
