--- a/templates/incorrect.html
+++ b/templates/incorrect.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Incorrect</title>
     <link rel="stylesheet" type="text/css" href="../static/incorrect.css">
-    <script src="../static/js/answersCheck.js"></script>
 
 </head>
 <body>
@@ -37,6 +36,10 @@
             <input type="button" value="TRY AGAIN" onclick="tryAgain()">
             </form>
     </div>
-
+<script>
+    document.querySelector('input').addEventListener('click', function(){
+      window.location.href = 'http://127.0.0.1:5000/dashboard';
+    })
+</script>
 </body>
 </html>
