--- a/static/css/exit.css
+++ b/static/css/exit.css
@@ -10,7 +10,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(../images/page-photo.png) center center fixed;
+    background: url(../images/background.webp) center center fixed;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
