--- a/templates/intro.html
+++ b/templates/intro.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>R-Code Project Game</title>
+    <title>R-Code Project </title>
     <link rel="stylesheet" href="/static/intro.css">
+    <link rel="stylesheet" href="/static/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lato&family=Quicksand&display=swap" rel="stylesheet">
