--- a/static/countries.css
+++ b/static/countries.css
@@ -1,32 +1,14 @@
-:root {
-    --white: #EEEBEB;
-    --bordeaux: #8C0F26;
-    --green:#2D5951;
-    --red: #F23558;
-    --font: 'IBM Plex Mono', monospace;
-}
-
-body{
-    background-image: url("images/background.webp");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom right;
-    min-height: 97.8vh;
-    font-family: var(--font);
-}
-
 .enter-name-body{
-    text-align: center;
     display: flex;
+    text-align: center;
     flex-direction: column;
     justify-content: center;
     align-content: center;
 }
 
-.logo{
+.logo-countries{
+    align-self: center;
     margin: 3rem auto;
-    height: 5rem;
-    width: 13rem;
 }
 
 .enter-name-text{
@@ -35,38 +17,6 @@ body{
     width: 60%;
     align-self: center;
     margin: 0;
-}
-
-.enter-name-input{
-    margin: 2rem auto;
-    height: 1rem;
-    width: 27rem;
-    background-color: transparent;
-    border-radius: 20px;
-    border: solid 2px var(--white);
-    padding: 0.8rem 15rem;
-    font-family: var(--font);
-    font-size: large;
-    text-align: center;
-    color: var(--white);
-}
-
-.enter-name-submit{
-    align-self: end;
-    width: 10rem;
-    padding: 1rem;
-    border-color: var(--white);
-    border-radius: 20px;
-    color: var(--bordeaux);
-    background-color: var(--white);
-    font-weight: bolder;
-    font-size: 20px;
-}
-
-.enter-name-submit:hover{
-    background-color: var(--bordeaux);
-    color: var(--white);
-    border-color: var(--bordeaux);
 }
 
 .enter-name-div{
@@ -100,6 +50,7 @@ body{
     height: 70vh;
     text-align: center;
     border-radius: 30px;
+    margin-bottom: 1rem;
 }
 
 .howto-h1{
@@ -132,19 +83,3 @@ body{
     margin: auto;
 }
 
-.button{
-    display: flex;
-    margin: 1rem auto;
-    background-color: var(--white);
-    color: var(--bordeaux);
-    padding: 1rem 8rem;
-    border-radius: 20px;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.button:hover{
-    color: var(--white);
-    background-color: var(--bordeaux);
-    border: none;
-}
