--- a/static/intro.css
+++ b/static/intro.css
@@ -1,92 +1,21 @@
-* {
-    margin:0;
-    padding: 0;
-    font-family: 'IBM Plex Mono', monospace;
-}
-body {
-    background: url("/static/images/dashboard.png");
-    height: 100vh;
-    background-size: cover;
-    position: relative;
-}
-.vdo-space {
-    width: 1850px;
-    height: 760px;
-    background: #EEEBEB;
-    border-radius:30px;
 
+
+.video{
     display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 3%;
-    bottom: 8%;
     margin: auto;
+    margin-top: 5vh;
+    align-self: center;
+    border-radius:20px;
+    width: 100%;
 }
 
-.button-space {
+.button-space{
     display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: absolute;
-    right: 0;
-    left: 65%;
-    top: 90%;
-    bottom: 0;
-    margin: auto;
-}
-#how-to-play {
-    width: 250px;
-    height: 50px;
-
-    padding: 10px 30px;
-    font-size:1.3rem;
-    font-weight: bold;
-    cursor: pointer;
-    border: 0;
-    letter-spacing: 1px;
-    position: relative;
-    margin: 10px;
-    transition: all 0.25s;
-
-    background: #EEEBEB;
-    color:#8C0F26 ;
-    border-radius:30px;
-    transition: all 0.25s;
-    overflow: hidden;
+    margin: 1rem;
+    width: 100vw;
+    justify-content: flex-end;
 }
 
-#how-to-play:hover {
-    background-color: #8C0F26;
-    color: #EEEBEB;
-}
-
-#skip {
-    width: 250px;
-    height: 50px;
-
-    padding: 10px 30px;
-    font-size:1.3rem;
-    font-weight: bold;
-    cursor: pointer;
-    border: 0;
-    letter-spacing: 1px;
-    position: relative;
-    margin: 10px;
-    transition: all 0.25s;
-
-    background: #EEEBEB;
-    color:#8C0F26 ;
-    border-radius:30px;
-    transition: all 0.25s;
-    overflow: hidden;
-}
-
-#skip:hover {
-    background-color: #8C0F26;
-    color: #EEEBEB;
+.button{
+    margin: 0 3rem !important;
 }
