--- a/static/start.css
+++ b/static/start.css
@@ -1,69 +1,15 @@
-* {
-    margin:0;
-    padding: 0;
-    font-family: 'IBM Plex Mono', monospace;
-}
-
-body {
-    background-image: url("../static/images/start_bg.webp");
+.start-div{
     height: 100vh;
-    background-size: cover;
-    position: relative;
-}
-.wrapper {
-    max-width: 100%;
-    text-align: center;
-}
-.logoVer img{
-    width: 380px;
-    height: 480px;
-
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 15%;
-    margin: auto;
-}
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 60%;
-    bottom: 0;
-    margin: auto;
-}
-.start-bt {
-    width: 500px;
-    height: 80px;
-
-    padding: 10px 100px;
-    font-size:2.7rem;
-    font-weight: bold;
-    cursor: pointer;
-    border: 0;
-    letter-spacing: 1px;
-    position: relative;
-    margin: 15px;
-    transition: all 0.25s;
-
-    background: #EEEBEB;
-    color:#8C0F26 ;
-    border-radius:30px;
-    transition: all 0.25s;
-    overflow: hidden;
+    align-content: center;
 }
 
-.start-bt:hover {
-    background-color: #8C0F26;
-    color: #EEEBEB;
+.big-logo{
+    margin: 2rem auto;
+    width: 15rem;
+    height: 20rem;
 }
+
 
