--- a/templates/detective_name.html
+++ b/templates/detective_name.html
@@ -7,14 +7,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=Life+Savers:wght@400;700&family=Maitree:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/countries.css">
+    <link rel="stylesheet" href="../static/index.css">
     <title>R-code Project</title>
 </head>
 <body class="enter-name-body">
-    <img src="../static/images/logo ho.webp" class="logo">
+    <img src="../static/images/logo ho.webp" class="logo logo-countries">
     <p class="enter-name-text">Welcome, agent. To unlock the classified files, please state your code name.</p>
     <form action="/set_name" class="enter-name-div" method="POST">
-        <input class="enter-name-input" type="text" name="name" placeholder="Enter your name...">
-        <input class="enter-name-submit" type="submit" value="OK">
+        <input class="input" type="text" name="name" placeholder="Enter your name...">
+        <input class="button" type="submit" value="OK">
     </form>
 </body>
 </html>
