--- a/templates/howto.html
+++ b/templates/howto.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/index.css">
     <link rel="stylesheet" href="../static/countries.css">
     <title>R-code Project</title>
 </head>
 <body>
-    <img src="../static/images/logo%20ho.webp" class="small-logo">
+    <img src="../static/images/logo%20ho.webp" class="logo">
     <div class="howto-div">
         <h1 class="howto-h1">HOW TO PLAY</h1>
         <div class="howto-inner-div">
