--- a/templates/mission-file.html
+++ b/templates/mission-file.html
@@ -2,19 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../static/countries.js" defer></script>
+    <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" type="text/css" href="../static/index.css">
+    <link rel="stylesheet" type="text/css" href="../static/mission-file.css">
     <title>R-Code Project Game</title>
-    <link rel="stylesheet" href="/static/mission-file.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lato&family=Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="logo">
-        <img src="/static/images/logo%20ho.webp" alt="Logo">
-    </div>
+    <img src="../static/images/logo ho.webp" class="logo logo-countries">
     <div class="mission-file">
         <img id="file-nor" src="/static/images/file.webp" alt="mission file">
-        <img id="file-hover" src="/static/images/file%20hover.webp" alt="mission file hover">
     </div>
 </body>
+<script>
+    let file= document.getElementById("file-nor");
+    file.addEventListener("mouseover", ()=>
+        file.src = "/static/images/file hover.webp"
+    )
+    file.addEventListener("mouseout", ()=>
+        file.src="/static/images/file.webp"
+    )
+</script>
 </html>
